@@ -13,6 +13,7 @@ from .google_imports import db
 from .google_imports import memcache
 from .google_imports import namespace_manager
 from .google_imports import users
+from .google_test_imports import datastore_stub_util
 
 from . import eventloop
 from . import key
@@ -3272,6 +3273,70 @@ class ModelTests(test_utils.NDBTest):
     bar = foo.key.get(use_memcache=False, use_cache=False)
     self.assertTrue(isinstance(bar.bk, model.BlobKey))
     self.assertEqual(bar.bk, bk)
+
+
+class IndexTests(test_utils.NDBTest):
+
+  def create_index(self):
+    ci = datastore_stub_util.datastore_pb.CompositeIndex()
+    ci.set_app_id(os.environ['APPLICATION_ID'])
+    ci.set_id(0)
+    ci.set_state(ci.WRITE_ONLY)
+    index = ci.mutable_definition()
+    index.set_ancestor(0)
+    index.set_entity_type('Kind')
+    property = index.add_property()
+    property.set_name('property1')
+    property.set_direction(property.DESCENDING)
+    property = index.add_property()
+    property.set_name('property2')
+    property.set_direction(property.ASCENDING)
+    stub = self.testbed.get_stub('datastore_v3')
+    stub.CreateIndex(ci)
+
+  def testGetIndexes(self):
+    self.assertEqual([], model.get_indexes())
+
+    self.create_index()
+
+    self.assertEqual(
+      [model.IndexState(
+        definition=model.Index(kind='Kind',
+                               properties=[
+                                 model.IndexProperty(name='property1',
+                                                     direction='desc'),
+                                 model.IndexProperty(name='property2',
+                                                     direction='asc'),
+                                 ],
+                               ancestor=False),
+        state='building',
+        id=1,
+        ),
+       ],
+      model.get_indexes())
+
+  def testGetIndexesAsync(self):
+    fut = model.get_indexes_async()
+    self.assertTrue(isinstance(fut, tasklets.Future))
+    self.assertEqual([], fut.get_result())
+
+    self.create_index()
+
+    self.assertEqual(
+      [model.IndexState(
+        definition=model.Index(kind='Kind',
+                               properties=[
+                                 model.IndexProperty(name='property1',
+                                                     direction='desc'),
+                                 model.IndexProperty(name='property2',
+                                                     direction='asc'),
+                                 ],
+                               ancestor=False),
+        state='building',
+        id=1,
+        ),
+       ],
+      model.get_indexes_async().get_result())
 
 
 class CacheTests(test_utils.NDBTest):
