@@ -2,6 +2,7 @@ Release 0.9.8 (release candidate)
 
 Final tweaks:
 
+- Issue 149: Add get_index() API.
 - Issue 152: Made @utils.wrapping() more robust.
 - Moved @context.toplevel to @tasklets.toplevel.
 - Made GQL honor the default_model in the adapter.
